# OS_CS_3113

./: CMakeLists.txt  Hw1.c  Hw1.h  README.md  assignment1.c  assignment1.h  main.c
Assigment3/: Project3.c  Project3.h  README.md
genUtilsLib/: arika_utils.c  arika_utils.h
hw2/: README.md  hw2.c
prevHomeworks/proj1(onlyInUbuntu/: assignment1.c
src/: CMakeLists.txt
src/CopySingleFileproj2onlyInUbuntu/: assignment2copy.c
src/prevHomeworks/CopySingleFileproj2onlyInUbuntu/: assignment2copy.c
src/prevHomeworks/hw2/: README.md  hw2.h
src/prevHomeworks/proj2onlyInUbuntu/: semaphore.h
src/proj2(onlyInUbuntu/: assignment2.c  semaphore.h  sharedMemory.h
src/proj2onlyInUbuntu/: assignment2.c  sharedMemory.h
